--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
-[package]
-name = "dbg2"
-version = "0.1.0"
-edition = "2021"
-
-[lib]
-crate_type = ["staticlib", "cdylib", "rlib"]
-
-[dependencies]
-diplomat = { git = "https://github.com/rust-diplomat/diplomat", rev = "3a6e50cdf921247fb87979c9a709e7f1df5b8046", version = "0.8.0" }
-diplomat-runtime = { git = "https://github.com/rust-diplomat/diplomat", rev = "3a6e50cdf921247fb87979c9a709e7f1df5b8046", version = "0.8.1" }
-
+[workspace]
+members = [
+  "js_slice",
+  "wasm_bindgen"
+]
+resolver = "2"
